finished home page

--- a/index.html
+++ b/index.html
@@ -28,9 +28,31 @@
       <section class="sides">
 
       </section>
+
       <section class="main-section">
-        
+
+        <section class="main-top-half">
+
+          <section id="home-intro">
+            <h2>Husband, Father, Developer</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt magni perferendis inventore culpa, repellat sunt minus beatae non animi numquam fugiat exercitationem doloribus sit eius autem vitae voluptatibus? Cum, molestiae!</p>
+          </section>
+
+          <section id="home-img">
+            <img src="images/small-dude.png">
+          </section>
+
+        </section>
+
+        <section class="main-bottom-half">
+          <section id="home-quote">
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit."</p>
+            <p>-Random dude</p>
+          </section>
+        </section>
+
       </section>
+
       <section class="sides">
 
       </section>
