small text changes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <section id="home-quote">
             <hr>
             <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit."</p>
-            <p>-Random dude</p>
+            <p>-Someone probably</p>
           </section>
         </section>
 
