fixed alt text for images

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
         <section class="cars">
           <h3>Cars</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet asperiores consequatur placeat minima numquam cumque quam adipisci repellat ratione repellendus ex enim, doloremque illo magnam voluptas ab, tempora praesentium ut!</p>
-          <img src="images/cars.jpg" alt="cars" class="float-right">
+          <img src="images/cars.jpg" alt="some cars" class="float-right">
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi, nam odit eligendi itaque dolorem dolores voluptates amet quos modi quibusdam vero doloribus vitae, temporibus aut. Molestias optio ab fugit reiciendis.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, praesentium quisquam, consequatur maiores sit reiciendis illo ducimus aspernatur molestias eaque quae quos temporibus, eos natus excepturi impedit ratione at placeat!</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ex dolore ipsum magnam sapiente ratione blanditiis officiis, magni quidem. Voluptatum impedit cupiditate aperiam, officiis nulla ex voluptate adipisci consectetur omnis?</p>
@@ -43,7 +43,7 @@
         <hr>
         <section class="football">
           <h3>Football</h3>
-          <img src="images/football.jpg" alt="football" class="float-left">
+          <img src="images/football.jpg" alt="A football" class="float-left">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, perferendis? Corporis, nostrum quae quasi sequi odio nisi libero dignissimos, fugit nulla quisquam veniam impedit veritatis possimus excepturi ducimus voluptas esse!</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ipsam obcaecati minima nam. Eligendi distinctio in fugiat excepturi dignissimos quis ullam optio, temporibus corrupti porro sed nemo eum nisi quidem!</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et nihil maiores quod sint aliquid quasi atque ea modi, inventore quisquam sunt, deleniti animi qui voluptatibus ratione, error laborum fugiat libero!</p>
@@ -52,7 +52,7 @@
         <hr>
         <section class="Computers">
           <h3>Computers</h3>
-          <img src="images/computers.jpg" alt="computers" class="float-right">
+          <img src="images/computers.jpg" alt="a computer" class="float-right">
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde minima rerum corporis blanditiis? Mollitia repudiandae veritatis totam minus asperiores beatae, natus laborum numquam enim eaque temporibus dolore animi, earum modi!</p>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga asperiores qui tempore eaque consectetur molestiae, dolore vel possimus veniam deleniti ullam, deserunt ad unde exercitationem debitis molestias sunt commodi eum?</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis accusamus iusto quod. Culpa voluptate quam distinctio saepe commodi aperiam ex reprehenderit est modi laborum asperiores, praesentium, laboriosam magni perspiciatis corrupti!</p>
