--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </section>
 
           <section id="home-img">
-            <img src="images/small-dude.png">
+            <img src="images/small-dude.png" alt="a man on a beach">
           </section>
 
         </section>
